# WevCMakeReverbPlugin

./: .gitignore  CMakeLists.txt
src/: FDN4.cpp  FDN4.h  FDN4Reverb.cpp  FDN4Reverb.h  FeedbackCombFilter.cpp  FeedbackCombFilter.h  FeedforwardCombFilter.cpp  FeedforwardCombFilter.h  FixedAllPass.cpp  FixedAllPass.h  FractionalDelay.cpp  FractionalDelay.h  Hadamard4.cpp  Hadamard4.h  IntegerAllPass.cpp  IntegerAllPass.h  IntegerDelay.cpp  IntegerDelay.h  IntegerFBCF.cpp  IntegerFBCF.h  JCReverb.cpp  JCReverb.h  MixingMatrix4.h  OnePoleFilter.cpp  OnePoleFilter.h  OutputTap.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SchroederReverb.cpp  SchroederReverb.h  SmoothedParameter.cpp  SmoothedParameter.h  VariableAllPass.cpp  VariableAllPass.h
test Project/: test.als
